clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20021127_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20021127-1.c" (c, x86_64-unknown-linux-gnu)
global a : s64i = CirInt { ty: Named("s64i"), value: "-1" } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %4 = alloca s32i, "__retval", align 4
        %5 = const 0 : s32i
        store %5, %4
        scope {
                %8 = get_global @a : s64i*
                %9 = load %8 : s64i, align 8
                abs
                %11 = const 1 : s64i
                cmp
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = const 0 : s32i
        store %6, %4
        %7 = load %4 : s32i
        return %7
}
fn llabs(%arg0: s64i) -> s64i [external, c, no_inline, const, dso_local, nothrow] {
    ^bb0(%arg0: s64i):
        %0 = alloca s64i, "b", align 8
        %1 = alloca s64i, "__retval", align 8
        store %arg0, %0
        %2 = get_global @abort : () -> void*
        call @abort() [all]
        %3 = load %1 : s64i
        return %3
}
