clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20021204_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20021204-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[5] = "test" [cir_private, default, align 1, dso_local, constant]
global z : s32i = 0 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo(%arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %28 = alloca s32i, "x", align 4
        store %arg2, %28
        scope {
            %29 = load %28 : s32i, align 4
            %30 = const 1 : s32i
            %31 = cmp ne %29, %30 : bool
            if %31 {
                %32 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca s8i*, "a", align 8
        %4 = alloca s8i*, "b", align 8
        store %arg0, %0
        store %arg1, %1
        %5 = const 0 : s32i
        store %5, %2
        %6 = get_global @.str : s8i[5]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        store %7, %3, align 8
        %8 = load %3 : s8i*, align 8
        %9 = const 2 : s32i
        %10 = ptr_stride %8, %9 : s8i*
        store %10, %4, align 8
        %11 = get_global @z : s32i*
        %12 = load %11 : s32i, align 4
        %13 = const 0 : s32i
        %14 = cmp gt %12, %13 : bool
        %15 = ternary %14 ? { : s64i
            %25 = load %4 : s8i*, align 8
            %26 = load %3 : s8i*, align 8
            %27 = ptr_diff %25, %26 : s64i
            yield %27
        } : {
            %20 = load %4 : s8i*, align 8
            %21 = load %3 : s8i*, align 8
            %22 = ptr_diff %20, %21 : s64i
            %23 = const 1 : s64i
            %24 = sub %22, %23 : s64i [nsw]
            yield %24
        }
        %16 = cast(integral) %15 : s32i
        call @foo(%16) [all]
        %17 = get_global @exit : ((s32i) -> void)*
        %18 = const 0 : s32i
        call @exit(%18) [all]
        %19 = load %2 : s32i
        return %19
}
