clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20021219_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20021219-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.str : s8i[11] = ConstArray { ty: Array { element_type: Named("s8i"), size: 11 }, elts: Str("foo { xx }"), trailing_zeros_num: 1 } [cir_private, default, dso_local, constant]

fn foo(%arg0: s8i*, %arg1: s8i**) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: s8i**):
        %32 = alloca s8i*, "p1", align 8
        %33 = alloca s8i**, "p2", align 8
        store %arg0, %32
        store %arg1, %33
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[11], "str", align 1
        %2 = alloca s8i*, "ptr", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @__const.main.str : s8i[11]*
        copy
        %5 = cast(array_to_ptrdecay) %1 : s8i*
        %6 = const 5 : s32i
        ptr_stride
        store %7, %2, align 8
        %8 = load %2 : s8i*, align 8
        call @foo(%8, %2) [all]
        scope {
                while {
                        %14 = load %2 : s8i*, align 8
                        %15 = load %14 : s8i, align 1
                        %16 = cast(integral) %15 : s32i
                        %17 = cast(int_to_bool) %16 : bool
                        %18 = ternary %17 ? { : bool
                                %20 = load %2 : s8i*, align 8
                                %21 = load %20 : s8i, align 1
                                %22 = cast(integral) %21 : s32i
                                %23 = const 13 : s32i
                                cmp
                                %25 = ternary %24 ? { : bool
                                        %31 = const true : bool
                                        yield %31
                                } : {
                                        %26 = load %2 : s8i*, align 8
                                        %27 = load %26 : s8i, align 1
                                        %28 = cast(integral) %27 : s32i
                                        %29 = const 32 : s32i
                                        cmp
                                        yield %30
                                }
                                yield %25
                        } : {
                                %19 = const false : bool
                                yield %19
                        }
                        condition %18
                } do {
                        %11 = load %2 : s8i*, align 8
                        %12 = const 1 : s32i
                        ptr_stride
                        store %13, %2, align 8
                        yield
                }
                yield
        }
        %9 = const 0 : s32i
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
