clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030109_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20030109-1.c" (c, x86_64-unknown-linux-gnu)
global x : rec_X = ConstRecord { ty: Named("rec_X"), members: Array([CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "40" }, Zero { ty: Array { element_type: Named("s32i"), size: 0 } }]) } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %4 = get_global @x : rec_X*
                get_member
                %6 = load %5 : s32i, align 4
                %7 = const 40 : s32i
                cmp
                if %8 {
                        %9 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
