clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030125_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20030125-1.c" (c, x86_64-unknown-linux-gnu)
fn sin(%arg6: double) -> double [weak, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: double):
        %37 = alloca double, "a", align 8
        %38 = alloca double, "__retval", align 8
        store %arg6, %37
        %39 = load %37 : double, align 8
        store %39, %38
        %40 = load %38 : double
        return %40
}
fn t(%arg5: float) -> float [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: float):
        %29 = alloca float, "a", align 4
        %30 = alloca float, "__retval", align 4
        store %arg5, %29
        %31 = get_global @sin : ((double) -> double)*
        %32 = load %29 : float, align 4
        %33 = cast(floating) %32 : double
        %34 = call @sin(%33) : double [all]
        %35 = cast(floating) %34 : float
        store %35, %30
        %36 = load %30 : float
        return %36
}
fn q(%arg4: float) -> float [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: float):
        %22 = alloca float, "a", align 4
        %23 = alloca float, "__retval", align 4
        store %arg4, %22
        %24 = load %22 : float, align 4
        %25 = cast(floating) %24 : double
        %26 = floor %25 : double
        %27 = cast(floating) %26 : float
        store %27, %23
        %28 = load %23 : float
        return %28
}
fn q1(%arg3: float) -> double [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: float):
        %16 = alloca float, "a", align 4
        %17 = alloca double, "__retval", align 8
        store %arg3, %16
        %18 = load %16 : float, align 4
        %19 = cast(floating) %18 : double
        %20 = floor %19 : double
        store %20, %17
        %21 = load %17 : double
        return %21
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %12 = alloca s32i, "__retval", align 4
    %13 = const 0 : s32i
    store %13, %12
    %14 = const 0 : s32i
    store %14, %12
    %15 = load %12 : s32i
    return %15
}
fn abort() -> void [external, c, nothrow];
fn floor(%arg2: double) -> double [weak, c, no_inline, const, dso_local, nothrow] {
    ^bb0(%arg2: double):
        %8 = alloca double, "a", align 8
        %9 = alloca double, "__retval", align 8
        store %arg2, %8
        %10 = get_global @abort : (() -> void)*
        call @abort() [all]
        %11 = load %9 : double
        return %11
}
fn floorf(%arg1: float) -> float [weak, c, no_inline, const, dso_local, nothrow] {
    ^bb0(%arg1: float):
        %4 = alloca float, "a", align 4
        %5 = alloca float, "__retval", align 4
        store %arg1, %4
        %6 = load %4 : float, align 4
        store %6, %5
        %7 = load %5 : float
        return %7
}
fn sinf(%arg0: float) -> float [weak, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: float):
        %0 = alloca float, "a", align 4
        %1 = alloca float, "__retval", align 4
        store %arg0, %0
        %2 = get_global @abort : (() -> void)*
        call @abort() [all]
        %3 = load %1 : float
        return %3
}
