clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030203_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20030203-1.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg1: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %20 = alloca s32i, "i", align 4
        store %arg1, %20
        return
}
fn do_layer3(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %9 = alloca s32i, "single", align 4
        %10 = alloca s32i, "__retval", align 4
        %11 = alloca s32i, "stereo1", align 4
        store %arg0, %9
        scope {
            %15 = load %9 : s32i, align 4
            %16 = const 0 : s32i
            %17 = cmp ge %15, %16 : bool
            if %17 {
                %19 = const 1 : s32i
                store %19, %11, align 4
                yield
            } else {
                %18 = const 2 : s32i
                store %18, %11, align 4
                yield
            }
            yield
        }
        %12 = load %9 : s32i, align 4
        call @f(%12) [all]
        %13 = load %11 : s32i, align 4
        store %13, %10
        %14 = load %10 : s32i
        return %14
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const -1 : s32i
        %5 = call @do_layer3(%4) : s32i [all]
        %6 = const 2 : s32i
        %7 = cmp ne %5, %6 : bool
        if %7 {
            %8 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
